# Robotcraft_2021

./: README.md  encoder reader
AI/catkin_ws/src/robotcraft_maze/: CMakeLists.txt
AI/catkin_ws/src/robotcraft_maze/launch/: maze.launch  pro_maze.launch
AI/catkin_ws/src/robotcraft_maze/maps/: map.yaml
AI/catkin_ws/src/robotcraft_maze/src/: maze_BASICsolver.cpp  maze_PROsolver.cpp  maze_noOdom.cpp  maze_wallFollower.cpp
MobileRoboticWeek1/: encoder_test_sens
MobileRoboticWeek1/encoderv2/: encoderv2.ino
MobileRoboticWeek1/sensorTest4/: sensorTest4.ino
MobileRoboticWeek1/sensorTest5/: sensorTest5.ino
MobileRoboticWeek2/kinematics1_v2/: kinematics1_v2.ino
MobileRoboticWeek2/kinematics2/: kinematics2.ino
MobileRoboticWeek2/kinematics3/: kinematics3.ino
MobileRoboticWeek2/kinematics3_v2/: kinematics3_v2.ino
ROS_Integration/catkin_ws/src/robotcraft2019_robot_description/: CMakeLists.txt  package.xml
ROS_Integration/catkin_ws/src/robotcraft2019_robot_description/launch/: display_robotcraft2019.launch
ROS_Integration/catkin_ws/src/robotcraft2021_driver_g07/: CMakeLists.txt  package.xml
ROS_Integration/catkin_ws/src/robotcraft2021_driver_g07/rviz/: config.rviz
ROS_Integration/firmware/: firmware.ino
ROS_Integration/firmware_debug/: firmware_debug.ino
ROS_Integration/firmware_rewrite/: firmware_rewrite.ino
ROS_Simulation/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py
ROS_Simulation/catkin_ws/src/simstage_group7/: CMakeLists.txt  package.xml
doc/: notesOnSensorsAndEncoders.odt
encoderv2/: encoderv2.ino
sensorTest3/: sensorTest3.ino
(+19 files in other folders)
